added cronjob support
